public/css/scss/_homepage.scss
/* Homepage layout */

#home #header {
    margin-bottom : 0;
}

#intro {
    background     : #a5e3f3 url("../images/head-bottom.png") no-repeat top center;
    text-align     : center;
    /* padding-top    : 25px; */
    padding-bottom : 25px;
    width          : 100%;
    height         : 225px;

    img {
        height : 200px;
    }
}

#download {
    height        : 15px;
    width         : 100%;
    background    : url('../images/wrapper-main-middle-shadow.jpg') repeat-x center top transparent;
    background    : url("../images/download-custom-shadow.jpg") no-repeat scroll center top, url('../images/wrapper-main-middle-shadow.jpg') repeat-x center top;
    margin-bottom : 50px;

    @media only screen and (max-width: 767px) {
        margin-bottom : 25px;
        overflow      : visible;
    }

    a {
        background      : url("../images/download-now-btn.png") no-repeat scroll 0 0 transparent;
        background-size : cover;
        display         : block;
        height          : 100px;
        top             : -50px;
        width           : 100%;
        max-width       : 415px;
        min-width       : 235px !important;
        position        : relative;
        margin-right    : auto;
        margin-left     : auto;

        @media only screen and (max-width: 390px) {
            height : 75px;
        }
    }

    &:hover a {
        background-image : url("../images/download-now-btn_over.png")
    }
}

#reasons {
    margin-bottom : 50px;
    padding-left  : 15px;
    padding-right : 15px;

    @media only screen and (max-width: 767px) {
        padding-left  : 0;
        padding-right : 0;
    }

    h3 {
        color               : rgb(74, 195, 27);
        padding-left        : 50px;
        background-position : left center;
        background-repeat   : no-repeat;
        line-height         : 35px;
        text-shadow         : 0 1px 0 rgb(255, 255, 255);

        @media only screen and (max-width: 767px) {
            padding-left     : 0;
            background-image : none;
        }

        @media only screen and (max-width: 479px) {
            font-size : 22px;
        }
    }

    > div:first-child {
        @include box-shadow(-1px 0 0 rgba(255, 255, 255, 0.8) inset, 1px 0 0 rgba(0, 0, 0, 0.15));

        @media only screen and (max-width: 767px) {
            @include box-shadow(none);
        }
    }

    #training-ad {
        height             : 390px;
        width              : 300px;
        margin-top		   : 50px;
        display            : block;
        margin-left        : auto;
        margin-right       : auto;
        -webkit-transition : opacity 0.5s;
        -moz-transition    : opacity 0.5s;

        /*
        &:hover {
            background-position : -1px -399px;
        }
        */
    }
}

#reasons h1,
#clients h2 {
    text-shadow : 0 2px 0 rgb(255, 255, 255);

    @media only screen and (max-width: 979px) {
        text-align : center;
    }
}

#modular {
    background-image : url('../images/modular.png');
}

#secure {
    background-image : url('../images/secure.png');
}

#extensible {
    background-image : url('../images/extensible.png');
}

#community {
    background-image : url('../images/community.png');
}

#high-performing {
    background-image : url('../images/high-performing.png');
}

#enterprise-ready {
    background-image : url('../images/enterprise-ready.png');
}

#php-hero a {
    background         : url("../images/php-hero.png") no-repeat scroll 0 0 transparent;
    height             : 390px;
    width              : 300px;
    display            : block;
    margin-left        : auto;
    margin-right       : auto;
    -webkit-transition : opacity 0.5s;
    -moz-transition    : opacity 0.5s;

    &:hover {
        background-position : -1px -399px;
    }
}

#apigility a {
    background         : url("../images/apigility_banner.png") no-repeat scroll 0 0 transparent;
    height             : 390px;
    width              : 300px;
    display            : block;
    margin-top		   : 50px;
    margin-left        : auto;
    margin-right       : auto;
    -webkit-transition : opacity 0.5s;
    -moz-transition    : opacity 0.5s;

    /*
    &:hover {
        background-position : -1px -399px;
    }
    */
}

#zf2a-course a {
    background         : url("../images/ZF2-Certification-390x300px.png") no-repeat scroll 0 0 transparent;
    height             : 390px;
    width              : 300px;
    margin-top		   : 50px;
    display            : block;
    margin-left        : auto;
    margin-right       : auto;
    -webkit-transition : opacity 0.5s;
    -moz-transition    : opacity 0.5s;

    /*
    &:hover {
        background-position : -1px -399px;
    }
    */
}

#background {
    background    : url("../images/middle-top-separator.png") repeat-x left top, url("../images/middle-bottom-separator.png") repeat-x left bottom rgb(228, 228, 228);
    padding       : 40px 15px 20px 15px;
    margin-bottom : 25px;

    @media only screen and (max-width: 767px) {
        padding-left  : 0;
        padding-right : 0;
    }

    /*
    > div > div:first-child {
        @include box-shadow(-1px 0 0 rgba(255, 255, 255, 0.8) inset, 1px 0 0 rgba(0, 0, 0, 0.15));

        @media only screen and (max-width: 767px) {
            @include box-shadow(none);
        }
    }
    */
}

#zendcon {
    a {
        height             : 390px;
        width              : 300px;
        display            : block;
        margin-left        : auto;
        margin-right       : auto;

        img:hover {
            -webkit-transition : opacity 0.5s;
            -moz-transition    : opacity 0.5s;
        }
    }

    @include box-shadow(1px 0 0 rgba(255, 255, 255, 0.8) inset, -1px 0 0 rgba(0, 0, 0, 0.15));

    @media only screen and (max-width: 767px) {
        @include box-shadow(none);
    }
}


// Links
#links {
    .tabs {
        @media only screen and (max-width: 767px) {
            display       : table;
            margin-left   : auto;
            margin-right  : auto;
            margin-bottom : 10px;
        }

        dd {
            margin-right : 10px;

            @media only screen and (max-width: 767px) {
                margin-right : 5px;
            }

            &:last-child {
                margin-right : 0;
            }

            &.active {
                border     : none;
                margin-top : 0;
            }

            a {
                font-family   : $headlineFont;
                border-radius : 1000px;
                padding       : 8px 20px;
                line-height   : 1em;
                height        : auto;
                font-size     : 22px;
                color         : rgb(173, 173, 173);
                border        : 1px solid rgb(201, 201, 201);
                font-weight   : normal;

                @include box-shadow(0 2px 0 rgba(255, 255, 255, 0.5) inset);

                &:hover {
                    color            : rgb(50, 50, 50);
                    background-color : rgb(210, 210, 210);

                    @include box-shadow(0 2px 0 rgba(0, 0, 0, 0.2) inset);
                }

                @media only screen and (max-width: 767px) {
                    font-size : 12px;
                }
            }

            &.active a {
                background-color : rgb(36, 185, 255);
                border           : 1px solid rgb(228, 228, 228);
                color            : rgb(255, 255, 255);
                position         : relative;

                @include box-shadow(none);

                &:after {
                    border-color : rgb(36, 185, 255) transparent transparent transparent;
                    border-width : 10px;
                    border-style : solid;
                    width        : 0;
                    height       : 0;
                    content      : '';
                    display      : block;
                    bottom       : -20px;
                    position     : absolute;
                    left         : 42%;
                }
            }

            @media only screen and (max-width: 767px) {
                display : table-cell;
            }
        }
    }

    .tabs-content {
        margin-left  : 15px;
        margin-right : 15px;
        margin-top   : 20px;
        clear        : both;

        @media only screen and (max-width: 767px) {
            margin-top : 10px;
        }

        > li {
            @media only screen and (max-width: 767px) {
                text-align : center;
            }
        }

        h5 {
            padding : 10px 0;
            margin  : 0;

            @include box-shadow(0 -1px 0 rgba(0, 0, 0, 0.1) inset, 0 1px 0 rgba(255, 255, 255, 0.6));

            &:last-child {
                @include box-shadow(none);
            }

            a {
                @media only screen and (max-width: 767px) {
                    display : block;
                }
            }
        }
    }
}

// Clients
#clients {
    margin-bottom : 40px;
    padding-left  : 15px;
    padding-right : 15px;

    @media only screen and (max-width: 767px) {
        padding-left  : 0;
        padding-right : 0;
    }

    h2 {
        margin-left   : 15px;
        margin-right  : 15px;
        margin-bottom : 25px;
    }

    > ul {
        margin : 0;

        li {
            text-align : center;
        }
    }

    img {
        filter         : url('filters.svg#grayscale'); /* Firefox 3.5+ */
        filter         : gray; /* IE6-9 */
        -webkit-filter : grayscale(1); /* Google Chrome & Safari 6+ */
        opacity        : 0.4;

        &:hover {
            filter         : none;
            -webkit-filter : grayscale(0);
            opacity        : 1;

            @include animation(opac 1s forwards);
        }
    }
}

@include keyframes(opac) {
    0% {
        opacity : 0.4;
    }
    100% {
        opacity : 1;
    }
}

.dev-tools {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: flex-end;
    text-align: center;
    margin-top: 1em;

    div.tool {
        width: 300px;
    }
}

.dev-tools.images {
    align-items: center;
    margin-bottom: 0;
}

.dev-tools.info {
    margin-top: 0;
    margin-bottom: 4em;
}

.caption {
    font-size: 1.5em;
    margin-top: 1em;
    margin-bottom: 1em;
}

#dialog_promo {
	margin: 0px;
	padding: 0px;
	position: fixed;
    bottom: 0;
    width: 1200px;
	left: 50%;
	margin-left: -600px;
}

#promo-image{
}

#promoClose {
	position: absolute;
	display: inline-block;
	top: 55px;
    right: 55px;
	color: #17729f;
	cursor: pointer; 
	cursor: hand;
}

